test/sh/error/func/var_as_func.sk
x := 1

x() { noop }
